changing toString method of Author Class